# sfinge-qt6

./: .gitignore  CMakeLists.txt  README.md
scripts/: build.sh  build_headless.sh  clean.sh  create-deb.sh  create-static-cli.sh  deploy.sh  deploy_system.sh  install_dependencies.sh  run.sh  sfinge.sh  test.sh
sfinge-cli-pure/: CMakeLists.txt
sfinge-cli-pure/src/: main.cpp
sfinge-cli-pure/src/core/: batch_generator.cpp  batch_generator.h  fingerprint_generator.cpp  fingerprint_generator.h  gabor_filter.h  image.cpp  image.h  minutiae_generator.cpp  minutiae_generator.h  orientation_generator.cpp  orientation_generator.h  ridge_generator.cpp  ridge_generator.h
sfinge-cli-pure/src/models/: fingerprint_parameters.cpp  fingerprint_parameters.h  singular_points.cpp  singular_points.h
src/: cli_main.cpp  cli_pure_main.cpp  main.cpp
src/core/: batch_generator.cpp  batch_generator.h  batch_generator_core.cpp  batch_generator_core.h  batch_worker.cpp  batch_worker.h  density_generator.cpp  density_generator.h  fingerprint_generator.cpp  fingerprint_generator.h  fingerprint_generator_pure.cpp  fingerprint_generator_pure.h  fingerprint_worker.cpp  fingerprint_worker.h  fomfe_orientation_generator.cpp  fomfe_orientation_generator.h  frequency_field_smoother.cpp  frequency_field_smoother.h  gabor_filter.cpp  generators_pure.h  image_buffer.cpp  image_buffer.h  math_utils.h  minutiae_generator.cpp  minutiae_generator.h  orientation_generator.cpp  orientation_generator.h  orientation_smoother.cpp  orientation_smoother.h  phase_field_generator.cpp  phase_field_generator.h  phase_field_generator_pure.h  quality_mask_generator.cpp  quality_mask_generator.h  ridge_generator.cpp  ridge_generator.h  shape_generator.cpp  shape_generator.h
src/core/rendering/: perlin_noise.cpp  perlin_noise.h  texture_renderer.cpp  texture_renderer.h
src/core/variation/: variation_effects.cpp  variation_effects.h
src/models/: fingerprint_parameters.cpp  fingerprint_parameters.h  fingerprint_parameters_pure.h  singular_points.cpp  singular_points.h  singular_points_pure.cpp  singular_points_pure.h
src/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/ui/dialogs/: batch_dialog.cpp  batch_dialog.h  export_dialog.cpp  export_dialog.h  parameters_dialog.cpp  parameters_dialog.h
src/ui/widgets/: density_control_widget.cpp  density_control_widget.h  orientation_control_widget.cpp  orientation_control_widget.h  preview_widget.cpp  preview_widget.h  shape_control_widget.cpp  shape_control_widget.h
src/utils/: file_handler.cpp  file_handler.h  image_converter.cpp  image_converter.h
tests/: test_density_generator.cpp  test_math_utils.cpp  test_orientation_generator.cpp  test_shape_generator.cpp
